syntax = "proto3";

package instructions;
option go_package = "sochordspb";

import "chords.proto";

message StringCombination {
  string e4 = 1;
  string b = 2;
  string g = 3;
  string d = 4;
  string a = 5;
  string e2 = 6;
  string chord = 7;
  string guide = 8;
}

message TabInstructionBlock {
  repeated StringCombination picks = 1;
  bool break_line = 2;
  string trailing_text = 3;
}

message TabInstruction {
  repeated TabInstructionBlock tab_blocks = 1;
}

message Chord {
  string name = 1;
  // Reference to a GuitarChord ID.
  string guitar_chord_id = 2;
}

message ChordInLyric {
  string id = 1;
  Chord chord = 2 [deprecated = true];
  int32 offset = 3;
  SongChord songChord = 4;
}

message ChordsAndLyrics {
  string id = 1;
  string lyric_line = 2;
  repeated ChordInLyric chords_in_lyric = 3;
  bool break_line = 4;
}

message Strum {
  enum StrumDirection {
    NO_STRUM = 0;
    UP = 1;
    DOWN = 2;
  }
  StrumDirection direction = 1;
  bool is_highlighted = 2;
}

message StrummingPattern {
  repeated Strum strums = 1;
}

message ChordInstruction {
  repeated ChordsAndLyrics chords_and_lyrics = 1;
  repeated Chord chords  = 2;
  StrummingPattern strumming_pattern = 3;
}

